# calvin_robot

./: README.md  stack.xml
calvin_arm_navigation/: mainpage.dox  manifest.xml
calvin_arm_navigation/config/: calvin_planning_description.yaml  filters.yaml  joint_limits.yaml  joint_limits_full_speed.yaml  ompl_planning.yaml  planning_scene_warehouse_viewer.vcg
calvin_arm_navigation/launch/: calvin_arm_navigation.launch  calvin_planning_environment.launch  constraint_aware_kinematics.launch  fake_jointstate_pub_kinematics_solver.launch  move_arm.launch  move_groups.launch  ompl_planning.launch  planning_components_visualizer.launch  planning_scene_warehouse_viewer_calvin.launch  planning_scene_warehouse_viewer_calvin_gazebo.launch  planning_scene_warehouse_viewer_calvin_real.launch  trajectory_filter_server.launch
calvin_arm_navigation/perception/config/: collision_map_sources.yaml  self_filter.yaml
calvin_arm_navigation/perception/launch/: kinect_perception.launch
calvin_bringup/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
calvin_bringup/config/: calvin_lms200_self_filter.yaml  calvin_self_filter.yaml  calvin_tim3xx_self_filter.yaml  calvin_xtion_self_filter.yaml  depth.yaml  rgb.yaml
calvin_bringup/launch/: calvin.launch  calvin_all_modules.launch  calvin_extras.launch  calvin_filter_chain.launch  commanders.launch  ekf.launch  imu.launch  katana.launch  laser.launch  laser_filter_chain.launch  move_base_straight.launch  sick_lms200.launch  vgacamera.launch  xtion.launch  xtion_filter_chain.launch  xtion_self_filter.launch
calvin_common/: manifest.xml
calvin_common/launch/: calvin_extras.launch  calvin_extras_avz3rd.launch
calvin_description/: CMakeLists.txt  camera.yaml  manifest.xml  package.xml  rviz.vcg
calvin_description/bases/: calvin_base.urdf.xacro
calvin_description/config/: vgacamera.yaml
calvin_description/launch/: calvin.launch  calvin_rviz.launch  calvin_slam.launch  upload_calvin.launch
calvin_description/meshes/: cup.blend  cup.stl  item-base.blend  item-pole.blend  item-pole.stl  item-structure.blend  item-structure.stl  item.blend
calvin_description/robots/: calvin.urdf.xacro
calvin_description/scripts/: alltopics  bagrecord.sh  bagtopics  bagtopics2  bringup-topics  record-rosbag-depthimages.sh
calvin_description/tops/: muffin_top.urdf.xacro
calvin_description/urdf/: calvin.urdf.xacro  gazebo.urdf.xacro  muffinsetup.urdf.xacro
calvin_gazebo/: CMakeLists.txt  manifest.xml  package.xml
calvin_gazebo/config/: calvin_pole_controllers.yaml
calvin_gazebo/launch/: README  calvin_avz3rd_world.launch  calvin_avz_world.launch  calvin_empty_world.launch  calvin_gazebo_common.launch  calvin_table_world.launch  calvin_wg_world.launch  ekf.launch  robot.launch  spawn_calvin.launch  upload_calvin.launch
calvin_joint_commander/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
calvin_joint_commander/cfg/: JointCommander.cfg
calvin_joint_commander/include/: joint_commander.h
calvin_joint_commander/launch/: calvin_joint_commander.launch
calvin_joint_commander/src/: joint_commander.cpp
calvin_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
calvin_moveit_config/config/: calvin.srdf  calvin_execution_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_limits_full_speed.yaml  kinematics.yaml  ompl_planning.yaml  paddings.yaml  sensors_kinect.yaml  sensors_kinect_depthimage.yaml  sensors_kinect_pointcloud.yaml
calvin_moveit_config/launch/: calvin_moveit_controller_manager.launch  calvin_moveit_sensor_manager.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch
calvin_msgs/: CMakeLists.txt  manifest.xml  package.xml
calvin_msgs/action/: PickAndStore.action  PickServer.action
calvin_object_manipulation_launch/: manifest.xml
calvin_object_manipulation_launch/config/: katana_hand_descriptions.yaml
calvin_object_manipulation_launch/launch/: katana_manipulation.launch  katana_manipulation_prerequisites.launch
calvin_object_manipulation_launch/nodes/: fake_list_controllers.py
calvin_pick_n_place/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
calvin_pick_n_place/src/: calvin_pick_n_place.cpp  demo.cpp  demo2.cpp  pick_n_place.cpp  picktest.cpp
calvin_pick_server/: CMakeLists.txt  manifest.xml  package.xml
calvin_pick_server/action/: PickServer.action
calvin_pick_server/launch/: pick_server.launch
calvin_pick_server/src/: pick_server.cpp  pick_server_test.py  pick_server_test.py.errormsg
calvin_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
calvin_tabletop_manipulation_launch/: mainpage.dox  manifest.xml
calvin_tabletop_manipulation_launch/launch/: katana_tabletop_manipulation.launch
vddben_description/: manifest.xml
vddben_description/bases/: vddben_base.urdf.xacro
vddben_description/launch/: upload_vddben.launch  vddben_rviz.launch
vddben_description/robots/: vddben.urdf.xacro
vddben_description/tops/: muffin_top.urdf.xacro
