<package>
  <name>calvin_msgs</name>
  <version>0.0.1</version>
  <description>Messages, services and actions used with calvin</description>
  <author email="mgoerner@uos.de">Michael Goerner</author>

  <maintainer email="mgoerner@uos.de">Michael Goerner</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/calvin_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
