<package>
  <name>calvin_pick_n_place</name>
  <version>0.1.0</version>
  <description>
    A pick and place behavior for Calvin.
  </description>
  
  <author email="mgoerner@uni-osnabrueck.de"> Michael Görner</author>
  <maintainer email="mgoerner@uni-osnabrueck.de"> Michael Görner</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/calvin_pick_n_place</url>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>



